--- a/plugins/qnode/tools/mocknode/pages/front.css
+++ b/plugins/qnode/tools/mocknode/pages/front.css
@@ -12,11 +12,18 @@
     /*border: 1px solid #c2c2d6 ;*/
 }
 
-.just_text{
+.just_text_left{
     font-family: "Liberation Mono", monospace;
     text-align: left;
     font-size: 15px;
 }
+
+.just_text_right{
+    font-family: "Liberation Mono", monospace;
+    text-align: right;
+    font-size: 15px;
+}
+
 
 .my_account_highlight{
     font-family: "Liberation Mono", monospace;
